# bluechip-chatbot-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: audit.py  config.py  db.py  db_models.py  deps.py  email.py  main.py  models.py  permissions.py  redact.py  retrieval.py  schemas.py  security.py  seed.py  sessions.py  tokens.py
app/guardrails/: masking_guard.py
app/knowledge/: decision_rules.py  email_templates.py  sop_workflow.md
app/prompts/: system_prompt.py
app/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py
app/routers/: __init__.py  audit.py  auth.py  chats.py  roles.py  users.py
app/services/: __init__.py  chats.py
app/tools/: __init__.py  account.py  eligibility.py  forms.py  knowledge.py  masking.py  outcomes.py  templates.py
knowledge_sources/: _README.md  bluchip_faqs_more.md  merge_account_sop.md  sop_account_management.md  terms_and_conditions.md
