[project]
name = "bluchip-assist-backend"
version = "0.1.0"
description = "Internal agent-assist chatbot backend for IndiGo BluChip merge-account workflow + FAQs"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "anthropic>=0.49",
    "google-genai>=1.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sse-starlette>=2.1",
    "python-dotenv>=1.0",
    "pypdf>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
